added border around images in page css

--- a/pages/page_theme.css
+++ b/pages/page_theme.css
@@ -28,6 +28,7 @@ img {
     margin-right:auto;
     width:500px;
     height: 500px;
+    border:2px outset brown;
 }
 .divLine {
     border:1px brown;
