--- a/home_theme.css
+++ b/home_theme.css
@@ -6,6 +6,18 @@
     padding-left:10px;
     padding-right:10px;
 }
+.siteVer {
+    color:antiquewhite;
+    margin-top:0px;
+    margin-bottom:0px;
+    text-align:center;
+}
+.thumbnail_large {
+    border:2px oustet brown;
+    height:100px;
+    margin-top:15px;
+    margin-bottom:15px;
+}
 .divLine {
     border:1px brown;
     background-color:brown;
@@ -19,6 +31,8 @@
     padding-bottom:10px;
     padding-left:10px;
     padding-right:10px;
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr;
 }
 .footerPanel {
     border:5px outset brown;
@@ -27,12 +41,12 @@
     padding-bottom:10px;
     padding-left:10px;
     padding-right:10px;
+    margin-top:90%;
 }
 .bodyPanel {
     background-color:white;
     border:5px inset brown;
-    margin-top:10px;
-    margin-bottom:10px;
+    margin-top:1%;
 }
 .container {
     margin-top:10px;
