--- a/home_theme.css
+++ b/home_theme.css
@@ -6,6 +6,35 @@
     padding-left:10px;
     padding-right:10px;
 }
+.navPanel {
+    padding-left:2px;
+    padding-right:2px;
+    padding-top:10px;
+    width:100px;
+    background-size:contain;
+    position:relative;
+}
+.iconSpan {
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    z-index: 1;
+    background: url("images/fvtt.png") no-repeat center center;
+    background-size:contain;
+}
+.fnavLink {
+    color:blanchedalmond;
+    background-color:brown;
+    border:2px outset burlywood;
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-left:15px;
+    padding-right:15px;
+    text-decoration:none;
+    text-align:center;
+}
 .siteVer {
     color:antiquewhite;
     margin-top:0px;
@@ -17,6 +46,9 @@
     height:100px;
     margin-top:15px;
     margin-bottom:15px;
+}
+.thumbnail_med {
+    height:40px;
 }
 .divLine {
     border:1px brown;
